// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders avatar recommend 1`] = `
<div>
  <div
    class="css-xi606m"
  >
    <div
      class="css-zk1q33"
    >
      <div
        class="chakra-aspect-ratio css-rioh04"
      >
        <img
          alt="John Smith"
          class="chakra-image css-1g04xlb"
          src="undefined/https://cdn.iconscout.com/icon/free/png-256/avatar-370-456322.png"
        />
      </div>
      <div
        class="css-1ps3ybl"
      >
        recommended
      </div>
    </div>
    <p
      class="chakra-text css-7ehhn"
    >
      John Smith
    </p>
  </div>
</div>
`;

exports[`renders avatar unchanged 1`] = `
<div>
  <div
    class="css-xi606m"
  >
    <div
      class="css-zk1q33"
    >
      <div
        class="chakra-aspect-ratio css-rioh04"
      >
        <img
          alt="John Smith"
          class="chakra-image css-1g04xlb"
          src="undefined/https://cdn.iconscout.com/icon/free/png-256/avatar-370-456322.png"
        />
      </div>
    </div>
    <p
      class="chakra-text css-7ehhn"
    >
      John Smith
    </p>
  </div>
</div>
`;
